--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
     "faker": "^6.6.6",
     "moment": "^2.29.3",
     "react": "17.0.2",
@@ -30,6 +31,7 @@
     "react-native-pie": "^0.6.1",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
     "react-native-shadow-cards": "^1.0.2",
