--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.3.2",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "^6.2.0",
     "@react-native-masked-view/masked-view": "^0.2.6",
@@ -25,12 +26,15 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-gifted-charts": "^1.2.36",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-picker": "^4.8.4",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-pager-view": "^5.4.24",
     "react-native-paper": "^4.12.2",
     "react-native-pie": "^0.6.1",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
+    "react-native-reanimated": "^2.9.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
